Fixed spacing of medical table

--- a/100DOSMythicUpdated.css
+++ b/100DOSMythicUpdated.css
@@ -731,7 +731,7 @@ ______________________________ start of medical tab ____________________________
 
 .sheet-medical_damage_effects{
 	display: grid;
-	grid-template-columns: 24% 24% 24% 24%;
+	grid-template-columns: 24.25% 24.25% 24.25% 24.25%;
 	column-gap: 1%;
 	row-gap: 5px;
 	margin-bottom: 5px;
@@ -741,7 +741,6 @@ ______________________________ start of medical tab ____________________________
 	padding-bottom: 0px !important;
 	margin-bottom: -4px !important;
 	border-radius: 0px 0px 9px 9px;
-
 }
 .sheet-medical_padding{
 	margin-bottom: 5px;
